navbar and sidebar ok

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <title>Vite App</title>
   </head>
-  <body>
+  <body class="font-sans mt-14 px-4 pt-4 pb-0 bg-gray-50 md:mt-20 md:ml-20">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
